# protonvpn-cli-ng

./: .gitignore  Cargo.toml  test.cfg
protonvpn_cli/: connection.py
src/: cli.rs  connection.rs  constants.rs  main.rs  utils.rs
text_desc/: connection.py  utils.py
