[package]
name = "protonvpn-cli-ng"
version = "0.1.0"
authors = ["0jdxt <jytrn@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/0jdxt/protonvpn-cli-ng/tree/master/protonvpn_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
dirs = "2.0.2"
clap = "2.33.0"
toml = "0.5.5"
serde = "1.0.104"
serde_derive = "1.0.104"
rust-ini = "0.14.0"
regex = "1.3.3"
serde_json = "1.0.44"
hyper = "0.13.1"
anyhow = "1.0.26"
users = "0.9.1"
nix = "0.16.1"
rand = "0.7.3"
tokio = { version = "0.2.9", features = ["full"] }
